--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="description" content="photo selling and buying platform for surfers" />
+    <meta name="keywords" content="photography, surf lesson, surf camp, surf, buy, your, surf, photos" />
+    <meta name="author" content="John Doe" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sending Pics</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Your Surf photos</h1>
+    </header>
+<main>
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod totam quasi, ab ducimus impedit maiores neque vero cupiditate laudantium sunt facilis quis ullam nam rem nesciunt odio sed pariatur repellendus.</div>
+</main>
+<footer>
+    Copyright Sending Pics
+ </footer>
 </body>
 </html>
+<!--your comment goes here-->
