--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>Your Surf photos</h1>
+        <h1 id="title" style="color: darkslategrey;">Your Surf photos</h1>
     </header>
 <main>
     <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod totam quasi, ab ducimus impedit maiores neque vero cupiditate laudantium sunt facilis quis ullam nam rem nesciunt odio sed pariatur repellendus.</div>
