--- a/about.html
+++ b/about.html
@@ -7,11 +7,6 @@
     <meta name="author" content="John Doe" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sending Pics</title>
-    <style>
-        a{
-            color: black;
-        }
-    </style>
 </head>
 <body>
     <header style="
@@ -24,8 +19,7 @@
         <h1>sendingpics.</h1>
         <ul>
             <li>
-              <a href="./index.html"
-              style="color: rgb(0, 0, 0);">Home</a>
+              <a href="./index.html">Home</a>
             </li>
             <li>
               <a href="./about.html">About</a>
@@ -33,8 +27,34 @@
           </ul>
     </header>
 <main>
-    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod totam quasi, ab ducimus impedit maiores neque vero cupiditate laudantium sunt facilis quis ullam nam rem nesciunt odio sed pariatur repellendus.</div>
+    <form>
+        <div>
+            <label for="Ffirstname">First Name</label>
+            <input type="text" id="firstname" placeholder="First Name" />
+            <label for="lastname">Last Name</label>
+            <input type="text" id="lastname" placeholder="Last Name" />
+        </div>
+        <div>
+            <label for="email">Email</label>
+            <input type="email" id="email" placeholder="Your Email" />
+            <label for="company">Email</label>
+            <input type="text" id="company" placeholder="Company" />
+        </div>
+        <div>
+            <label for="message">Leave your message here</label> <br />
+            <textarea
+            cols="50"
+            rows="10"
+            placeholder="Write here..."
+            ></textarea>
+        </div>
+        <div>
+            <input type="sumbit" value="Sumbit" /
+            >
+        </div>
+    </form>
 </main>
+
 <footer 
     style="
     background: rgb(255, 255, 255);
